sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:16: error: 'while' expected but 'for' found.
  for (i <- a to b) {
  ^AlgCocktailSort2:22: error: '(' expected but ';' found.
  a+=1 
^AlgCocktailSort2:25: error: ';' expected but 'while' found.
} while (t == false)
  ^AlgCocktailSort2:29: error: Unmatched closing brace '}' ignored here
}
^